# txtx

./: .gitignore  AST_LOCATION_PROPOSAL.md  AST_LOCATION_TRACKING.md  CODING_PRINCIPLES.md  Cargo.toml  DOCTOR_ARCHITECTURE.md  DOCTOR_COMMAND.md  DOCTOR_COMMAND_PROPOSAL.md  DOCTOR_INTEGRATION_PLAN.md  DOCTOR_PARSER_FLOW.md  DOCTOR_TEST_REFACTOR.md  FLOW_BLOCK_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LSP.md  LSP_ARCHITECTURE.md  LSP_HOVER_TROUBLESHOOTING.md  LSP_STATE_REVIEW.md  MIGRATION_TO_HCL_PARSER.md  PARSER_PARITY_ANALYSIS.md  QA_IMPROVEMENT_PLAN.md  STATUS.md  TESTING_CONVENTIONS.md  TESTING_GUIDE.md  TEST_CONVERSION_EXAMPLES.md  TREE_SITTER_INTEGRATION.md  WIP_PR_SUMMARY.md  doctor_cli_inputs.md  doctor_clickable_errors.md  doctor_clickable_errors_example.md  doctor_environment_handling.md  doctor_flow_semantics.md  doctor_flow_validation.md  doctor_format_support.md  doctor_overview.md  doctor_summary.md  test-lsp-anywhere.sh  test-lsp-direct.sh  test-lsp-protocol.sh  test_doctor.tx  test_doctor_flow_validation.tx  (+14 more)
.cargo/: config.toml
crates/tree-sitter-txtx/: Cargo.toml  build.rs  grammar.js  package-lock.json  package.json
crates/tree-sitter-txtx/bindings/rust/: lib.rs
crates/tree-sitter-txtx/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-txtx/test/corpus/: basic.txt
crates/txtx-lsp-server/: Cargo.toml
crates/txtx-lsp-server/src/: backend.rs  document.rs  lib.rs  symbols.rs
crates/txtx-parser/: Cargo.toml  README.md
crates/txtx-parser/src/: ast.rs  builder.rs  lib.rs  location.rs  renderer.rs  test_flow_traversal.rs  transform.rs  visitor.rs
doc/: VALIDATION_ARCHITECTURE.md
docs/: README.md
examples/: enhanced_builder_example.rs
test-workspace/: deploy.tx  deploy_fixed.tx  flows.tx  simple_test.tx  test-lsp-direct.sh  test-lsp-doctor.sh  test-lsp-protocol.sh  test-lsp-validation.sh  test_doctor_direct.sh  test_doctor_lsp.tx  test_doctor_validation.tx  test_lsp_doctor_integration.tx  test_lsp_doctor_simple.sh  test_lsp_enhanced.tx  test_lsp_integration.tx  test_lsp_multi_file_protocol.sh  test_validation.tx  txtx.yml
(+186 files in other folders)
