[package]
name = "tree-sitter-txtx"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter parser for txtx runbook language"
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "txtx"]
categories = ["parsing"]
repository = "https://github.com/txtx/txtx"

include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"