[package]
name = "txtx-lsp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol implementation for txtx"

[dependencies]
# LSP types
lsp-types = "0.94.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
dashmap = "6.0"
indexmap = "2.0"

# Text manipulation
ropey = "1.6"
regex = "1.10"

# txtx dependencies
txtx-core = { workspace = true, default-features = false }
txtx-parser = { workspace = true }
txtx-addon-kit = { workspace = true, default-features = false }

# Parsing
tree-sitter = "0.23"
tree-sitter-txtx = { path = "../tree-sitter-txtx" }

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"
tempfile = "3.8"
test-log = "0.2"
env_logger = "0.11"



# Property-based testing
proptest = "1.4"
