[package]
name = "txtx-parser"
version = "0.1.0"
edition = "2021"
description = "AST-based parser and manipulation for txtx runbooks"

[dependencies]
tree-sitter = "0.20"
tree-sitter-txtx = { path = "../tree-sitter-txtx" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"